# scoutingfrc

./: .gitignore  README.md  index.html  main.py  manage.py  pyproject.toml  style.css
homepage/: urls.py  views.py
homepage/templates/homepage/: index.html
images/: index.html
polls/: views.py
scout-blue/: settings.py  urls.py
scoutingfrc/: asgi.py  settings.py  urls.py  wsgi.py
static/: style.css
