[project]
name = "scoutingfrc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.8.1",
    "dj-database-url>=3.1.2",
    "django==5.1.7",
    "gunicorn==23.0.0",
    "packaging==24.2",
    "postgres==4.0",
    "psycopg==3.2.6",
    "psycopg2-pool==1.2",
    "sqlparse==0.5.3",
]
